<resources>
    <string name="app_name">Final Food App</string>
    <string name="aft1">AppImage</string>
    <string name="aft2">Enter your registered mobile number and email below :</string>
    <string name="aft3">phoneimage</string>
    <string name="aft4">Mobile Number (10 digits)</string>
    <string name="aft5">email_image</string>
    <string name="aft6">Email Address</string>
    <string name="aft7">Next</string>
    <string name="art1">Enter the received OTP below :</string>
    <string name="art2">OTP(4 characters)</string>
    <string name="art3">New Password(Min.4 characters)</string>
    <string name="art4">Confirm Password</string>
    <string name="art5">Submit</string>
    <string name="alt1">lockimage</string>
    <string name="alt2">Password</string>
    <string name="alt3">Login</string>
    <string name="alt4">Forgot Password?</string>
    <string name="alt5">Don\'t have an account?\nSign up now</string>
    <string name="am2t1">imageperson</string>
    <string name="am2t2">locationimage</string>
    <string name="ast1">Name (Min. 3 characters)</string>
    <string name="ast2">Delivery Address</string>
    <string name="ast3">Password (Min. 5 characters)</string>
    <string name="ast4">Confirm Password</string>
    <string name="ast5">Register</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="fragfaqt1">FAQs</string>
    <string name="fragfaqt2">Q. Will my data be sent/traded to any external company for the app owner\'s profit?</string>
    <string name="fragfaq3">A. No, none of your details are either shared or collected by the developer. All your personal details are stored only in your phone or on user server (that too just to verify for login actions by you). Developer will never collect or sell your personal data to external authorities.</string>
    <string name="fragfaq4">Q. What if the order I get is not what I ordered ?</string>
    <string name="fragfaq5">A. Users are our first priority. We double-check the order from both sides and so in first place, there is very less chances of order mismanagement. Still if there is any problem regarding order, the verdict will in most cases go to user\'s interest :)</string>
    <string name="fragfaq6"><![CDATA[For any other queries,\ncontact Help & Support\nat 0123456789]]></string>
    <string name="afavt1">\nNo Favourite\nRestaurants</string>
    <string name="afavt2">ImageDefault</string>
    <string name="mst1">Sort</string>
    <string name="mst2">Cost(Low to High)</string>
    <string name="mst3">Cost(High to Low)</string>
    <string name="mst4">Rating(High to Low)</string>
    <string name="mst5">Cost for One(Low to High)</string>
    <string name="fht1">Search For Restaurants</string>
    <string name="fht2">GO</string>
    <string name="f1">Add</string>
    <string name="f2">Remove</string>
    <string name="f3">Rs. %s</string>
    <string name="f4">Rs. %s/person</string>
    <string name="f5">Ordering from : %s</string>
    <string name="f6">Place Order(Total Rs.%d)</string>
    <string name="f7">passwordeye</string>
    <string name="f8">orderconfirm</string>
    <string name="aoct1">Your Order has been placed successfully!</string>
    <string name="aoct2">OK</string>
    <string name="fragfaq7">Q. How do I change my email address?</string>
    <string name="fragfaq8">A. You can contact the below helpline to manually make them change.</string>
    <string name="fragfaq9">Q. What are the modes of Payment supported by Final Food App?</string>
    <string name="fragfaq10">A. Currently the modes available are PayTM, BHIM/UPI Transaction and debit card transactions.</string>
    <string name="fragfaq11">Q. What purpose does this app serve?</string>
    <string name="fragfaq12">This app is the final project of Internshala Trainings which will be evaluated soon.</string>
    <string name="fragorderhistoryt1">You haven\'t placed any orders yet</string>
    <string name="fragorderhistoryt2">Your previous orders are listed below :</string>
    <string name="fragresdetailst1">Choose from menu listed below :</string>
    <string name="fragresdetailst2">Proceed to Cart</string>
    <string name="rechotelt1">hotelImage</string>
    <string name="rechotelt2">favicon</string>
    <string name="recmenut1">Add</string>
    <string name="menudrawert1">Home</string>
    <string name="menudrawert2">My Profile</string>
    <string name="menudrawert3">Favourite Restaurants</string>
    <string name="menudrawert4">Order History</string>
    <string name="menudrawert5">FAQs</string>
    <string name="menudrawert6">Log Out</string>
</resources>
