<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menudrawert1" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menudrawert2" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_nonfavourite"
            android:title="@string/menudrawert3" />

        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_history"
            android:title="@string/menudrawert4" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/menudrawert5" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menudrawert6" />

    </group>

</menu>