<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/aft1"
        android:src="@drawable/app_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/aft3"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:autofillHints="Mobile Number"
            android:background="@android:color/transparent"
            android:hint="@string/aft4"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:weightSum="20"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="25dp"
            android:contentDescription="@string/alt1"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="0dp"
            android:layout_weight="17"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:autofillHints="Password"
            android:background="@android:color/transparent"
            android:hint="@string/alt2"
            android:inputType="numberPassword" />

        <ImageView
            android:id="@+id/imgeye"
            android:src="@drawable/ic_visible"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:contentDescription="@string/f7" />

    </LinearLayout>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/alt3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/alt4"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="9dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/alt5"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>