<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".authentication.ForgetActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/aft1"
        android:src="@drawable/app_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/aft2"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/aft3"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:autofillHints="Mobile Number"
            android:background="@android:color/transparent"
            android:hint="@string/aft4"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/aft5"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:autofillHints="Email"
            android:background="@android:color/transparent"
            android:hint="@string/aft6"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/btnnext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/aft7"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

</LinearLayout>