<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".authentication.ResetPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/aft1"
        android:src="@drawable/app_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/art1"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <EditText
            android:id="@+id/etotp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="4dp"
            android:background="@android:color/transparent"
            android:hint="@string/art2"
            android:inputType="number"
            android:maxLength="4"
            android:autofillHints="OTP" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:autofillHints="Email"
            android:background="@android:color/transparent"
            android:hint="@string/art3"
            android:inputType="numberPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="7dp">

        <EditText
            android:id="@+id/etconfirmpass"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="4dp"
            android:autofillHints="Password"
            android:background="@android:color/transparent"
            android:hint="@string/art4"
            android:inputType="numberPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/art5"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

</LinearLayout>