<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/nav_gradient"
    android:layout_height="match_parent"
    tools:context=".orderHandling.OrderConfirm">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_check"
            android:contentDescription="@string/f8" />

        <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginHorizontal="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aoct1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnMainPage"
        android:text="@string/aoct2"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="70dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/test_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>